execute python scripts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.0",
     "@fi-sci/misc": "^0.0.10",
     "@fi-sci/splitter": "^0.0.3",
+    "@jupyterlab/services": "^7.3.5",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@types/plotly.js": "^2.35.2",
